# rgit

./: Cargo.toml  README.md  file1.txt  file2.txt
src/: cli.rs  file.rs  leaf.rs  main.rs  object.rs  repository.rs  rgit.rs
