[package]
name = "rgit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
diffs = "0.4.1"
clap = { version = "3.2.13", futures = ["derive"], features = ["derive"] }
configparser = "3.0.0"
flate2 = "1.0.24"
rust-crypto = "0.2.36"